--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#4f46e5" />
-    <title>EduLink Builder</title>
+    <title>Ap Files Request</title>
     <link rel="manifest" href="./manifest.json" />
     <script src="https://cdn.tailwindcss.com"></script>
   <script type="importmap">
