feat: Configure Gemini API key and improve error handling
Integrate Gemini API key via environment variables and enhance error messages for better user feedback. Add a TypeScript declaration for `process` to resolve type errors and provide a fallback for the API key.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#4f46e5" />
     <title>Ap Files Request</title>
     <link rel="manifest" href="./manifest.json" />
+    <!-- Keeping Tailwind CDN for simplicity as requested -->
     <script src="https://cdn.tailwindcss.com"></script>
   <script type="importmap">
 {
